examples/invalid/semantics/redefine_vars.rs
fn main() {
    let a = 42;
    let a = 24;
}